# solv

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  appveyor.yml  build.rs  cliff.toml  release.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.ci/: before_deploy.ps1  script.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml
ci/: before_deploy.sh
solp/: Cargo.toml  README.md
solp/fuzz/: .gitignore  Cargo.toml  run_fuzz.sh
solp/fuzz/corpus/parse/: malformed_truncated.sln  valid_minimal.sln  valid_with_dependencies.sln
solp/fuzz/dictionary/: parse.dict
solp/fuzz/fuzz_targets/: parse.rs  roundtrip.rs
solp/src/: api.rs  ast.rs  lex.rs  lib.rs  msbuild.rs  parser.rs  slnx.rs  solp.lalrpop
solp/src/slnx/: config.rs  convert.rs  mod.rs
solv/: Cargo.toml
solv/src/: convert.rs  error.rs  info.rs  json.rs  lib.rs  main.rs  nuget.rs  print.rs  ux.rs  validate.rs
src/: ast.rs  lex.rs  lib.rs  main.rs  msbuild.rs  parser.rs  print.rs  solt.lalrpop
