[workspace]
# uncomment this line anc comment next to enable fuzzing
# cargo +nightly fuzz run --release --fuzz-dir solp/fuzz parse
#members = ["solv", "solp", "solp/fuzz"]
members = ["solv", "solp"]
default-members = ["solv"]
resolver = "2"

[profile.release]
panic = 'abort'
lto = true
strip = true
