[workspace]
# fuzz example
# cargo +nightly fuzz run parse --release --fuzz-dir solp/fuzz -- -max_total_time=10 -dict=solp/fuzz/dictionary/parse.dict solp/fuzz/corpus/parse
members = ["solv", "solp"]
default-members = ["solv"]
resolver = "3"

[profile.release]
panic = 'abort'
lto = true
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"