[package]
name = "solp"
description = "Microsoft Visual Studio solution parsing library"
repository = "https://github.com/aegoroff/solv"
version = "0.18.0"
authors = ["egoroff <egoroff@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sln", "visualstudio", "parser", "microsoft", "solution"]
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "=0.22.2"

[dependencies]
lalrpop-util = "=0.22.2"
jwalk = "=0.8.1"
phf = { version = "=0.13.1", features = ["macros"] }
itertools = "=0.14.0"
num_cpus = "=1.17.0"
nom = "=8.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde-xml-rs = "=0.8.1"
miette = { version = "=7.6.0", features = ["fancy"] }

[dev-dependencies]
test-case = "=3.3.1"
proptest = "=1.9.0"

[lints]
workspace = true
