[package]
name = "solp"
description = "Microsoft Visual Studio solution parsing library"
repository = "https://github.com/aegoroff/solv"
version = "0.19.0"
authors = ["egoroff <egoroff@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sln", "visualstudio", "parser", "microsoft", "solution"]
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "=0.23.1", default-features = false }

[dependencies]
lalrpop-util = { version = "=0.23.1", default-features = false }
jwalk = "=0.8.1"
phf = { version = "=0.13.1", features = ["macros"] }
itertools = "=0.14.0"
num_cpus = "=1.17.0"
winnow = "=1.0.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde-xml-rs = "=0.8.2"
miette = { version = "=7.6.0", features = ["fancy"] }

[dev-dependencies]
test-case = "=3.3.1"
proptest = "=1.11.0"

[lints]
workspace = true
