[package]
name = "solv"
description = "SOLution Validation tool that analyzes Microsoft Visual Studio solutions"
repository = "https://github.com/aegoroff/solv"
homepage = "https://github.com/aegoroff/solv"
version = "0.16.9"
authors = ["egoroff <egoroff@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["sln", "visualstudio", "parser", "microsoft", "solution"]
readme = "../README.md"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "=7.1.3"
crossterm = "=0.28.1"
humantime = "=2.1.0"
clap = { version = "=4.5.28", features = ["std", "color", "suggestions", "cargo"] }
clap_complete = "=4.5.44"
solp = { path = "../solp/", version = "0.16.9" }
petgraph = "=0.7.1"
num-format = "=0.4.4"
itertools = "=0.14.0"
exitcode = "=1.1.2"
url = "=2.5.4"
color-eyre = "=0.6.3"
serde_json = "=1.0.138"

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "=0.1.43"

[dev-dependencies]
rstest = "=0.24.0"

[package.metadata.deb]
assets = [
    ["../target/release/solv", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "../target/release/solv", dest = "/usr/bin/solv", mode = "0755" },
]

[lints]
workspace = true
