[package]
name = "solv"
description = "SOLution Validation tool that analyzes Microsoft Visual Studio solutions"
repository = "https://github.com/aegoroff/solv"
homepage = "https://github.com/aegoroff/solv"
version = "0.17.0"
authors = ["egoroff <egoroff@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["sln", "visualstudio", "parser", "microsoft", "solution"]
readme = "../README.md"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "=7.1.4"
crossterm = "=0.28.1"
humantime = "=2.2.0"
clap = { version = "=4.5.32", features = ["std", "color", "suggestions", "cargo"] }
clap_complete = "=4.5.47"
solp = { path = "../solp/", version = "0.17.0" }
petgraph = "=0.7.1"
num-format = "=0.4.4"
itertools = "=0.14.0"
exitcode = "=1.1.2"
url = "=2.5.4"
serde_json = "=1.0.140"
bugreport = "=0.5.1"
miette = { version = "=7.5.0", features = ["fancy"] }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "=0.1.44"

[dev-dependencies]
rstest = "=0.25.0"

[package.metadata.deb]
assets = [
    ["../target/release/solv", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "../target/release/solv", dest = "/usr/bin/solv", mode = "0755" },
]

[lints]
workspace = true
